Fix issue with scrollbar appearing

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     font-size: normal;
 }
 
+html,
 body,
 ul,
 li {
@@ -24,8 +25,8 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: auto 5fr;
-    grid-template-rows: 1fr 7fr;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: auto 1fr;
 }
 
 
@@ -133,11 +134,15 @@ button {
 /* sidebar */
 .sidebar {
     min-width: 200px;
+    height: 100vh;
+    box-sizing: border-box;
+
+    color: aliceblue;
     background-color: var(--russian-green);
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    min-height: 100vh;
-    color: aliceblue;
+
+
     font-size: large;
     font-weight: bold;
 
